# banking-pipeline

./: .gitignore  Dockerfile  README.md  ai_prompts.md  assumptions.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
banking_pipeline/: __init__.py  dagster.yaml  definitions.py  workspace.yaml
banking_pipeline/assets/: __init__.py  access_layer.py  curated_layer.py  raw_layer.py  structured_layer.py
banking_pipeline/resources/: __init__.py  duckdb_resource.py  s3_resource.py
banking_pipeline/sensors/: __init__.py  file_sensor.py
data/sample/: accounts.csv  customers.csv
dbt/: dbt_project.yml  packages.yml  profiles.yml
dbt/macros/: audit_columns.sql  generate_schema_name.sql  interest_calculation.sql  standardize_boolean.sql
dbt/models/access/: _access__models.yml  account_summary.sql
dbt/models/curated/: dim_account.sql  (+3 more)
ddl/access/: account_summary.sql
ddl/curated/: dim_account.sql  dim_customer.sql  fact_customer_balances.sql  process_metadata.sql
ddl/raw/: file_ingestion_metadata.sql  raw_accounts.sql  raw_customers.sql  schema_version_tracking.sql
ddl/structured/: str_accounts.sql  str_customers.sql
docs/: OBSERVABILITY.md  VERIFICATION.md
scripts/: entrypoint.sh  generate_sample_data.py  init_minio.sh  run-pipeline.sh  run_e2e.sh  run_local.py  supervisord.conf
tests/: __init__.py
tests/dagster/: __init__.py  conftest.py  test_asset_materialization.py  test_asset_outputs.py  test_data_quality.py  test_incremental.py  test_metadata.py  test_resources.py
tests/integration/: __init__.py  test_full_pipeline.py
(+6 files in other folders)
