[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "banking-pipeline"
version = "0.1.0"
description = "Banking data pipeline using medallion architecture with Dagster, dbt, and DuckDB"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.6.0",
    "dagster-webserver>=1.6.0",
    "dagster-duckdb>=0.22.0",
    "dagster-dbt>=0.22.0",
    "dbt-core>=1.8.0",
    "dbt-duckdb>=1.8.0",
    "duckdb>=0.10.0",
    "boto3>=1.34.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "duckdb>=0.10.0",
    "sqlfluff>=3.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dagster*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

